# memory

./: .gitignore  CMakeLists.txt  azure-pipelines.yml  license.txt  readme.md
include/: allocation_strategy.h  heap.h  ngen_memory.h
source/: heap.cpp
test/: CMakeLists.txt  test_heap.cpp
